crates/aranya-policy-compiler/tests/data/structs/duplicate_struct_fact_already_defined_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `Foo` is defined multiple times
  |
2 | struct Foo {}
  |        --- previous defintion here
3 | fact Foo[]=>{}
  |      ^^^ re-defined here
